--- a/code/Workshop-2.ipynb
+++ b/code/Workshop-2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "<img src=\"../code/Resources/cropped-SummerWorkshop_Header.png\"> \n",
     "\n",
-    "<h1 align=\"center\">Workshop 2: Tutorial on behavior states</h1> \n",
+    "<h1 align=\"center\">Workshop 2: Tutorial on neuronal encoding and behavior</h1> \n",
     "<h3 align=\"center\">Summer Workshop on the Dynamic Brain</h3> \n",
     "<h3 align=\"center\">Thursday, August 26th, 2025</h3> \n",
     "<h4 align=\"center\">Day 2</h4> "
@@ -20,7 +20,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -38,5 +38,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
