Run HMM on different mice behavior

--- a/code/Workshop-1.ipynb
+++ b/code/Workshop-1.ipynb
@@ -76,7 +76,8 @@
    "source": [
     "# get units table \n",
     "\n",
-    "units_table = session.units.to_dataframe()"
+    "units_table = session.units.to_dataframe()\n",
+    "# QC criteria? "
    ]
   },
   {
