--- a/code/Workshop-2_engaged1.ipynb
+++ b/code/Workshop-2_engaged1.ipynb
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
     "lick_duration_threshold = 0.5\n",
     "lick_times = lick_times[lick_duration < lick_duration_threshold]\n",
     "in_bin = (lick_times[:, None] >= quiescent_start) & (lick_times[:, None] < quiescent_stop)\n",
-    "lick_counts = np.any(in_bin, axis=0).astype(int)\n",
+    "lick_counts = np.sum(in_bin, axis=0).astype(int)\n",
     "\n",
     "behavior_data = pd.DataFrame(behavior_data)\n",
     "\n",
