--- a/code/Workshop-1.ipynb
+++ b/code/Workshop-1.ipynb
@@ -4606,11 +4606,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<div style=\"background: rgb(32, 177, 13); border-radius: 3px; padding: 10px; color: white;\"> \n",
+    "<p><b>Task 1.3:</b> Can you make similar plots for pupil size measure and running speed? \n",
+    "</p> </div>"
+   ]
   },
   {
    "cell_type": "code",
