--- a/code/Workshop-1.ipynb
+++ b/code/Workshop-1.ipynb
@@ -491,9 +491,9 @@
     "\n",
     "# 2 Can we decode stimulus identity from a single neuron?\n",
     "\n",
-    "Its time to look at our first neuron! (WOOT!)\n",
+    "Its time to look at our first neuron of the day! (WOOT!)\n",
     "\n",
-    "You are going to hear this many times over the next to weeks: In this course, we will fit many models with increasing levels of abstraction to our data. It is always going to be tempting to jump straight into modeling, and gloss over the actual data. Don't be tempted to do this! Looking at and understanding your  data is, at the end of the day, alway more important than whatever model you might fit. After all, if your data are bad, so is your model.\n",
+    "A very important comment as you get ready to start your projects: In this course, we will fit many models with increasing levels of abstraction to our data. It is always going to be tempting to jump straight into modeling, and gloss over the actual data. Don't be tempted to do this! Looking at and understanding your  data is, at the end of the day, alway more important than whatever model you might fit. After all, if your data are bad, so is your model.\n",
     "\n",
     "Fortunately, someone here has already done a good chunk of the quality control on our data. So here, \"data\" really means the spike times for a given unit.\n",
     "\n",
