Fixed wonky rasters

--- a/code/Workshop-1.ipynb
+++ b/code/Workshop-1.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,9 +620,7 @@
     "\n",
     "Great! We have a neuron that responds to the stimulus!\n",
     "\n",
-    "But remember our goal here- we want to know if we can decode the difference between stimuli from this neuron. With that in mind, lets try seperating out the different stimulus identities.\n",
-    "\n",
-    "Recall that we did this before using numpy's <b> unique </b> function. Selecting return_inverse will give a easy way to sort the trial identities."
+    "But remember our goal here- we want to know if we can decode the difference between stimuli from this neuron. With that in mind, lets try seperating out the different stimulus identities.\n"
    ]
   },
   {
@@ -631,37 +629,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig, ax = plt.subplots(nrows=2, figsize=(5, 10))\n",
     "\n",
-    "fig,ax = plt.subplots(nrows = 2,figsize =(5,10))\n",
+    "# Define a stimulus window.\n",
+    "pre_window  = .2 # How far before the stimulus should we look?\n",
+    "post_window = .75 # How far after the stimulus should we look?\n",
+    "bin_size = .01 # What size bins do we want for our PSTH?\n",
+    "bins = np.arange(-pre_window,post_window+bin_size,bin_size) # Set up bins\n",
+    "bin_centers = bins[:-1]+bin_size/2\n",
     "\n",
-    "# A counter, useful for stacking plots\n",
-    "counter = 0\n",
+    "n_trials = len(stim_id)\n",
+    "\n",
+    "# Ensure integer trial ids for indexing\n",
+    "triggered_stim_index = triggered_stim_index.astype(int, copy=False)\n",
+    "\n",
+    "# Use unique to compute how many of each type of trial there are \n",
+    "_,counts  = np.unique(stim_id,return_counts=True)\n",
+    "\n",
+    "# Blocks will be offset by the number of trials of each type\n",
+    "offsets = np.zeros(len(unq_stim) + 1, dtype=int)\n",
+    "offsets[1:] = np.cumsum(counts)\n",
+    "\n",
+    "# We are remapping trials to rows, and we need a place to store the output\n",
+    "trial_to_row = np.empty(n_trials, dtype=int)\n",
+    "\n",
     "\n",
     "# Loop through trial types\n",
-    "for ii in range(len(unq_stim)):\n",
-    "    # Plot the raster just for this stimulus type\n",
+    "for i, stim in enumerate(unq_stim):\n",
     "    \n",
-    "    # spike times for this trial type\n",
-    "    this_triggered_spike_times = triggered_spike_times[stim_id[triggered_stim_index.astype(int)]==ii]\n",
+    "    this_trials = np.flatnonzero(stim_id == i)  # trial ids for stim i\n",
+    "    trial_to_row[this_trials] = offsets[i] + np.arange(len(this_trials), dtype=int)\n",
     "\n",
-    "    # trial index subselected by this trial type.\n",
-    "    this_trl_idx = np.arange(np.sum(stim_id[triggered_stim_index.astype(int)]==ii))\n",
+    "    if len(this_trials) == 0:\n",
+    "        continue\n",
     "\n",
-    "    # Plot\n",
-    "    ax[0].scatter(this_triggered_spike_times,counter + this_trl_idx,s = 1)\n",
-    "    ax[0].set_xlabel('Time from stimulus (seconds)')\n",
-    "    ax[0].set_ylabel('Trial number (sorted)')\n",
+    "    mask = np.isin(triggered_stim_index, this_trials)\n",
+    "    this_times = triggered_spike_times[mask]\n",
+    "    this_rows  = trial_to_row[triggered_stim_index[mask]]  # OK now that tsi is int\n",
     "\n",
-    "    # stack the plots\n",
-    "    counter +=np.max(this_trl_idx)\n",
-    "    \n",
-    "    # Plot the raster just for this stimulus type\n",
-    "    a,b = np.histogram(this_triggered_spike_times,bins = bins)\n",
-    "    a = a/np.max(this_trl_idx)/bin_size\n",
-    "    ax[1].plot(bin_centers,a,label = unq_stim[ii]) # Note that we are labeling each plot\n",
-    "    ax[1].set_xlabel('Time from stimulus (seconds)')\n",
-    "    ax[1].set_ylabel('Spike Rate (Hz)')\n",
-    "ax[1].legend() # Plot a legend using the established labels."
+    "    # Plot this chunk of the raster\n",
+    "    ax[0].scatter(this_times, this_rows, s=.1)  # add marker='|' for look\n",
+    "\n",
+    "    # Plot this PSTH\n",
+    "    a, _ = np.histogram(this_times, bins=bins)\n",
+    "    rate = a / this_trials.size / bin_size\n",
+    "    ax[1].plot(bin_centers, rate, label=str(stim))\n",
+    "\n",
+    "\n",
+    "# Labels\n",
+    "ax[0].set_xlabel('Time from stimulus (seconds)')\n",
+    "ax[0].set_ylabel('Trial # (sorted)')\n",
+    "ax[1].set_xlabel('Time from stimulus (seconds)')\n",
+    "ax[1].set_ylabel('Spike Rate (Hz)')\n",
+    "ax[1].legend()"
    ]
   },
   {
@@ -724,7 +744,7 @@
     "fig,ax = plt.subplots()\n",
     "tmp_bins = np.arange(-10,20,.15)\n",
     "ax.hist(x_1,tmp_bins,color= 'teal')\n",
-    "ax.hist(x_2,tmp_bins,color = 'orange')\n",
+    "ax.hist(x_2,tmp_bins,color = 'darkorange')\n",
     "ax.set_xlabel('Value')\n",
     "ax.set_ylabel('# Samples')"
    ]
@@ -1072,21 +1092,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'svc' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Get the predictions for our held out test data\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m prediction \u001b[38;5;241m=\u001b[39m \u001b[43msvc\u001b[49m\u001b[38;5;241m.\u001b[39mscore(x_test\u001b[38;5;241m.\u001b[39mreshape(\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m,\u001b[38;5;241m1\u001b[39m),y_test\u001b[38;5;241m.\u001b[39mravel())\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'svc' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Get the predictions for our held out test data\n",
     "prediction = svc.score(x_test.reshape(-1,1),y_test.ravel())"
@@ -1156,6 +1164,10 @@
     "im  = ax.imshow(confusion_matrix(y_true=y_test, y_pred=prediction, normalize='pred'))\n",
     "ax.set_xlabel('Predicted Class')\n",
     "ax.set_ylabel('True Class')\n",
+    "ax.set_xticks(np.arange(len(unq_stim)))\n",
+    "ax.set_yticks(np.arange(len(unq_stim)))\n",
+    "ax.set_xticklabels(unq_stim,rotation = 90)\n",
+    "ax.set_yticklabels(unq_stim)\n",
     "cbar = plt.colorbar(im)\n",
     "cbar.set_label('Fraction Guessed')\n"
    ]
@@ -1435,6 +1447,11 @@
     "im  = ax.imshow(confusion_matrix(y_true=y_test, y_pred=prediction, normalize='pred'))\n",
     "ax.set_xlabel('Predicted Class')\n",
     "ax.set_ylabel('True Class')\n",
+    "ax.set_xticks(np.arange(len(unq_stim)))\n",
+    "ax.set_yticks(np.arange(len(unq_stim)))\n",
+    "ax.set_xticklabels(unq_stim,rotation = 90)\n",
+    "ax.set_yticklabels(unq_stim)\n",
+    "\n",
     "cbar = plt.colorbar(im)\n",
     "cbar.set_label('Fraction Guessed')"
    ]
