--- a/code/HW-Worksheet-1-yoni.ipynb
+++ b/code/HW-Worksheet-1-yoni.ipynb
@@ -2279,7 +2279,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
