--- a/code/Workshop-2 - shawn-yonicopy.ipynb
+++ b/code/Workshop-2 - shawn-yonicopy.ipynb
@@ -3169,22 +3169,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Array([0, 0, 0, 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 2, 2, 2,\n",
-       "       2, 2, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 2, 3, 3, 3, 3, 3, 3, 0,\n",
-       "       0, 1, 1, 3, 3, 3, 3, 3, 3, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 1, 1, 2,\n",
-       "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 3, 3, 3, 3, 3, 0, 0,\n",
-       "       0, 0, 1, 1, 1, 1, 1, 1, 2, 2, 2, 2], dtype=int32)"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'hmm' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Simulate 100 samples from our HMM\u001b[39;00m\n\u001b[1;32m      2\u001b[0m num_timesteps \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1000\u001b[39m\n\u001b[0;32m----> 3\u001b[0m true_states, true_observations \u001b[38;5;241m=\u001b[39m \u001b[43mhmm\u001b[49m\u001b[38;5;241m.\u001b[39msample(key \u001b[38;5;241m=\u001b[39m key, params\u001b[38;5;241m=\u001b[39mtrue_params, num_timesteps\u001b[38;5;241m=\u001b[39mnum_timesteps)\n\u001b[1;32m      4\u001b[0m true_states\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'hmm' is not defined"
+     ]
     }
    ],
    "source": [
@@ -4730,10 +4727,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "<div style=\"border-left: 3px solid #000; border-radius: 3px; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
     "    \n",
