Updated data table references.

--- a/code/HW-Worksheet-1-yoni.ipynb
+++ b/code/HW-Worksheet-1-yoni.ipynb
@@ -172,18 +172,11 @@
     "\n",
     "Since we want to fit HMMs (and generally use more modern code), we need a different way to access our data.\n",
     "\n",
-    "For now, we have provided the ephys session and behavior session tables from the AllenSDK as CSV files attached to this capsule (see <i>/code/session_tables/*</i>. You can use these tables to find session that are of interest too you.\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6140d563-c0cf-4ac6-ad7f-1354a0ae290b",
-   "metadata": {},
-   "source": [
-    "<div style=\"border-left: 3px solid #000; padding: 1px; padding-left: 10px; background: #F0FAFF; \">\n",
+    "Fortunatly, there is a \"project_metadata\" folder in the data asset attached to codeocean that contains CSV versions of the what we were previously getting with the <b>AllenSDK</b>.\n",
     "\n",
-    "<i>Note:To get this table, all we did was open the day one capsule and use the <b>AllenSDK</b> to pull out the table and save it. If you want to use newer versions of Python/fancy packages for your projects, CodeOcean capsules or python virtual environments make it easy to have access to the AllenSDK without it breaking your more modern python installation. TAs will be happy to help you with this if you run into issues!</i> "
+    "<i> Note: If you discover that you want <b>AllenSDK</b> for your project you can still run it in a seperate capsuale or virtual environment. This will allow you to keep it from impacting your more modern code! Ask a TA if you need help making this work.</i>\n",
+    "\n",
+    "</div>"
    ]
   },
   {
@@ -193,7 +186,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ephys_session_table = pd.read_csv('/code/session_tables/ephys_session_table_VisualBehaviorNeuropixels.csv')\n",
+    "ephys_session_table = pd.read_csv('/data/visual-behavior-neuropixels/project_metadata/ecephys_sessions.csv')\n",
     "ephys_session_table.head()"
    ]
   },
@@ -564,7 +557,7 @@
    "outputs": [],
    "source": [
     "# Here is the behavior_session_table!\n",
-    "behavior_session_table = pd.read_csv('/code/session_tables/behavior_session_table_VisualBehaviorNeuropixels.csv')"
+    "behavior_session_table = pd.read_csv('/data/visual-behavior-neuropixels/project_metadata/ecephys_sessions.csv')"
    ]
   },
   {
